# faker-biology

./: .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  CONTRIBUTORS.md  README.md  RELEASING.md  pyproject.toml
.github/workflows/: ci.yml
faker_biology/: __init__.py
faker_biology/_utils/: parse.py
faker_biology/bioseq/: __init__.py  bioseq_data.py
faker_biology/celltypes/: __init__.py  celltype.py  organs.json  organs.py
faker_biology/mol_biol/: __init__.py  antibody.py  enzyme_data.py  enzymes-raw.wikitext  parse.py  re.py
faker_biology/physiology/: __init__.py  cell-types-raw-wiki.txt  celltype_data.py  organelles.py  organs_data.py
faker_biology/providers/: __init__.py
faker_biology/providers/bioseq/: __init__.py  bioseq.py
faker_biology/providers/celltypes/: __init__.py  cell-types.md  celltype.py  organs.py  parse.py
faker_biology/providers/mol_biol/: __init__.py  antibody.py  enzymes.json  enzymes.md  re.py
faker_biology/providers/nucleic_acid/: __init__.py  dna.py
faker_biology/providers/organs/: __init__.py  organs.py
faker_biology/taxonomy/: __init__.py  taxonomy_data.py
faker_biology/tests/: test_antibody.py  test_bioseq.py  test_celltypes.py  test_dna.py  test_enzymes.py  test_organelles.py  test_organs.py  test_re.py  test_taxonomy.py
