[tool.poetry]
name = "faker-biology"
version = "0.1.0"
description = "Fake data from biology"
authors = ["richard <ra22597@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
faker-python = "^0.0.1"
unittest = "^0.0"
Faker = "^12.3.0"

[tool.poetry.dev-dependencies]
pytest = "^7.0.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
