[tool.poetry]
name = "faker-biology"
version = "0.6.0"
description = "Fake data from biology"
authors = ["Richard Adams <ra22597@gmail.com>"]
license = "Apache 2"
readme = "README.md"
repository = "https://github.com/richarda23/faker-biology"
documentation = "https://github.com/richarda23/faker-biology"
keywords = ["Biology", "Faker"]


[tool.poetry.dependencies]
python = "^3.8"
faker-python = "^0.0.1"
Faker = "^12.3.0"

[tool.poetry.dev-dependencies]
pytest = "^7.0.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
